gs/base/gdevpdft.c
@@ -210,7 +210,6 @@ pdf_begin_transparency_group(gs_imager_state * pis, gx_device_pdf * pdev,
         pdev->FormDepth++;
         return pdf_make_form_dict(pdev, pparams, pis, group_dict, (cos_dict_t *)pres->object);
     }
-    pdev->FormDepth++;
     return 0;
 }
 
@@ -219,7 +218,6 @@ pdf_end_transparency_group(gs_imager_state * pis, gx_device_pdf * pdev)
 {
     int bottom = (pdev->ResourcesBeforeUsage ? 1 : 0);
 
-    pdev->FormDepth--;
     if (!is_in_page(pdev))
         return 0;	/* corresponds to check in pdf_begin_transparency_group */
     if (pdev->image_with_SMask) {
@@ -237,6 +235,7 @@ pdf_end_transparency_group(gs_imager_state * pis, gx_device_pdf * pdev)
         int code;
         uint ignore;
 
+        pdev->FormDepth--;
         code = pdf_exit_substream(pdev);
         if (code < 0)
             return code;
